--- a/FE/package.json
+++ b/FE/package.json
@@ -14,12 +14,15 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.2.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.30.0",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-images-uploading": "^3.1.7",
+    "react-moment": "^1.1.3",
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
