--- a/FE/package.json
+++ b/FE/package.json
@@ -17,6 +17,7 @@
         "apexcharts": "^3.40.0",
         "axios": "^1.2.0",
         "classnames": "^2.3.1",
+        "date-fns": "^2.30.0",
         "firebase": "^9.15.0",
         "formik": "^2.2.9",
         "framer-motion": "^10.12.10",
