--- a/FE/package.json
+++ b/FE/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/mulish": "^4.5.13",
+    "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
     "@mui/material": "^5.11.0",
     "@paypal/react-paypal-js": "^7.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -37,6 +38,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
