--- a/FE/package.json
+++ b/FE/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.12.10",
     "highcharts": "^11.0.1",
     "highcharts-react-official": "^3.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.2.1",
@@ -40,7 +41,6 @@
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
@@ -70,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "tailwindcss": "^3.3.2"
   }
 }
