--- a/FE/package.json
+++ b/FE/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.0",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,6 +38,7 @@
     "react-icons": "^4.4.0",
     "react-images-uploading": "^3.1.7",
     "react-overlays": "^5.2.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
